# dspbp-web

./: Cargo.toml  README.md  package-lock.json
.github/workflows/: deploy.yml
examples/: 新版本5飞机.txt
src/: blueprint.rs  lib.rs  version.rs  wasm.rs
src/data/: belt.rs  blueprint.rs  building.rs  enums.rs  station.rs
src/locale/: mod.rs
src/locale/data/cn/: items.rs  recipes.rs
src/locale/data/en/: items.rs  recipes.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.vue  BlueprintSummary.vue  itemIcons.ts  wasm.ts
