[package]
name = "dspbp"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "*", features = ["derive"] }
flate2 = "*"
base64 = "*"
anyhow = "*"
thiserror = "*"
lazy_static = "*"
serde = { version = "*", features = ["derive"], optional = true}
binrw = "*"
num_enum = "*"
serde_json = {version = "*", optional = true }
strum = { version = "*", features = ["derive"] }
urlencoding = "*"
log = "*"
simple_logger = "*"
pyo3 = { version = "*", optional = true, features = ["extension-module"] }
wasm-bindgen = { version = "*", optional = true }
console_error_panic_hook = { version = "*", optional = true }

[features]
default = ["dump"]
dump = ["serde", "serde_json"]
python = ["pyo3"]
wasm = ["wasm-bindgen", "console_error_panic_hook", "dump"]

[lib]
name = "dspbp"
crate-type = ["cdylib", "lib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
